@@ -4513,8 +4513,9 @@ the @samp{libcxx} project).
 The command-line tools can be (re-)installed by @command{xcode-select
 --install}.  (If you have a fresh installation of Mavericks, running
 e.g.@: @command{make} in a terminal will offer the installation of the
-command-line tools.)  They are no longer available under the
-@samp{Downloads} preference pane.
+command-line tools, or perhaps use the version for Xcode.  However,
+after an update to Mavericks, you are advised to re-installl them.)
+They are no longer available under the @samp{Downloads} preference pane.
 
 To use the compilers it provides with the recommended Fortran compiler,
 have in @file{config.site} something like
